# transformer_implementation

./: .gitignore  pyproject.toml  train.py
base/: base_trainer.py
conf/: config.yaml
conf/dataset/: tiny_shakespeare.yaml
conf/tokenizer/: char_tokenizer.yaml
dataset/: tinyshakespeare.py
models/transformer/embedding/: positional_encoding.py  token_embedding.py  transformer_embedding.py
models/transformer/layers/: multi_head_attention.py  position_wise_feed_forward.py  scaled_dot_product_attention.py
models/transformer/model/: transformer.py
trainer/: __init__.py  trainer.py
utils/: tokenizer.py  util.py
