[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pre-commit>=4.2.0",
    "ruff>=0.11.11",
    "seaborn>=0.13.2",
    "torch==2.5.1",
    "wandb>=0.19.11",
]
